--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <Title>Lojinha</Title>
         <meta charset="utf-8">
-        <link href="style.css" />
+        <link href="style.css" rel="stylesheet">
     </head>
 
     <body>
